# django-cronjob

./: LICENSE  README.rst  manage.py  requirements.txt  setup.cfg
cronjob/: admin.py  db_fields.py  factory.py  helper.py  jobs.py  models.py  tests.py  urls.py  validators.py  views.py
cronjob/migrations/: 0001_initial.py  0002_auto_20210910_2234.py  0003_alter_jobhistory_date_ended.py  0004_auto_20210912_1237.py
django-cronjob/: asgi.py  db.sqlite3  urls.py  wsgi.py
django-cronjob/settings/: __init__.py  cronjob.py  settings.py
django_cronjob.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
